--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "from constants import MONGO_NAME, MONGO_PW, MONGO_DB\n",
     "import pandas as pd\n",
     "from nba_api.stats.static import players\n",
+    "from nba_api.stats.static import teams\n",
     "from helpers import (\n",
     "    flatten_performance_df,\n",
     "    get_average_player_performances,\n",
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,14 +38,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "season_performances = pd.DataFrame(\n",
+    "    list(\n",
+    "        db.playerPerformances.find(\n",
+    "            {\n",
+    "            }\n",
+    "        )\n",
+    "    )\n",
+    ").set_index(\"_id\")\n",
+    "season_performances = flatten_performance_df(season_performances)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "season_performances.to_csv('data/all_time_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NBA Player Performance Statistics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Over 100 metrics of basketball player performances from NBA games dating from 2011 to 2022. Download the sample dataset to view all of the features in detail. Every row of the dataset corresponds to a single player's performance metrics in a particular game. All 9830 games are complete in that every player's statistics are listed. The total dataset has 255914 rows and 114 columns."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Basketball, NBA, Statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "gamefinder = leaguegamefinder.LeagueGameFinder()\n",
     "all_games = gamefinder.get_data_frames()[0]\n",
     "current_season = all_games[all_games.SEASON_ID == \"22021\"]\n",
-    "games = list(set(current_season.GAME_ID))\n",
+    "games = list(set(current_season.GAME_ID))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
     "active_players = players.get_active_players()\n",
     "active_players = pd.DataFrame(active_players)\n",
     "active_player_ids = active_players.id.to_list()\n",
@@ -74,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 603,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,153 +152,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-1.7874762 -1.0891979]\n"
+      "[0.9823462  0.14902875]\n"
      ]
     }
    ],
    "source": [
-    "team_A, team_B = 'BOS','BKN'\n",
-    "score = simulate_nba_matchup(team_A,team_B, average_performances,model=model, team_A_injured_player_ids=[1629057],team_B_injured_player_ids=[1627732,203925], team_size=team_size)\n",
+    "team_A, team_B = 'BOS','MIL'\n",
+    "score = simulate_nba_matchup(team_A,team_B, average_performances,model=model, team_size=team_size)\n",
     "print(score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-2.0520353  0.8505502]\n"
+      "[ 1.2418445 -1.4304397]\n"
      ]
     }
    ],
    "source": [
-    "team_A, team_B = 'TOR','PHI'\n",
-    "score = simulate_nba_matchup(team_A,team_B, average_performances, model=model, team_A_injured_player_ids=[1630567,1629018],team_B_injured_player_ids=[1629680,1629646], team_size=team_size)\n",
+    "team_A, team_B = 'GSW','MEM'\n",
+    "score = simulate_nba_matchup(team_A,team_B, average_performances, model=model, team_size=team_size)\n",
     "print(score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predicted +-</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>GSW</th>\n",
+       "      <td>1.241845</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MEM</th>\n",
+       "      <td>-1.430440</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Predicted +-\n",
+       "GSW      1.241845\n",
+       "MEM     -1.430440"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(score, index=['GSW','MEM'], columns=['Predicted +-'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 2.786693 -2.915257]\n"
+      "[-0.08540779 -0.08540779]\n"
      ]
     }
    ],
    "source": [
-    "team_A, team_B = 'MIL','CHI'\n",
+    "team_A, team_B = 'MIA','MIA'\n",
     "score = simulate_nba_matchup(team_A,team_B, average_performances, model=model,team_A_injured_player_ids=[201588],team_B_injured_player_ids=[1628366], team_size=team_size)\n",
     "print(score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-2.3065155  1.3494935]\n"
+      "[-0.92828393  2.1862316 ]\n"
      ]
     }
    ],
    "source": [
-    "team_A, team_B = 'MIN','MEM'\n",
+    "team_A, team_B = 'DAL','PHX'\n",
     "score = simulate_nba_matchup(team_A,team_B, average_performances, model=model, team_B_injured_player_ids=[1630583],team_size=team_size)\n",
-    "print(score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 2.3807132 -1.7018939]\n"
-     ]
-    }
-   ],
-   "source": [
-    "team_A, team_B = 'UTA','DAL'\n",
-    "score = simulate_nba_matchup(team_A,team_B, average_performances, model=model,team_size=team_size)\n",
-    "print(score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1.2093949  2.081089 ]\n"
-     ]
-    }
-   ],
-   "source": [
-    "team_A, team_B = 'DEN','GSW'\n",
-    "score = simulate_nba_matchup(team_A,team_B, average_performances, model=model, team_A_injured_player_ids=[1629008,1627750], team_B_injured_player_ids=[2738,1630164],team_size=team_size)\n",
-    "print(score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1.8014923  0.983259 ]\n"
-     ]
-    }
-   ],
-   "source": [
-    "team_A, team_B = 'ATL','MIA'\n",
-    "score = simulate_nba_matchup(team_A,team_B, average_performances, model=model, team_A_injured_player_ids=[101150,203991],team_size=team_size)\n",
-    "print(score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 2.616228  -1.4124826]\n"
-     ]
-    }
-   ],
-   "source": [
-    "team_A, team_B = 'PHX','NOP'\n",
-    "score = simulate_nba_matchup(team_A,team_B, average_performances, model=model, team_A_injured_player_ids=[1626164],team_size=team_size)\n",
     "print(score)"
    ]
   },
@@ -331,6 +370,13 @@
    ],
    "source": [
     "score.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "____"
    ]
   },
   {
