--- a/model.ipynb
+++ b/model.ipynb
@@ -7,13 +7,14 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "\n",
     "# from helpers import flatten_performance_df,get_performances_by_team,stack_df,win_loss_error_rate\n",
     "import xgboost as xgb\n",
     "from tqdm import tqdm\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import r2_score\n",
     "from sklearn.decomposition import PCA\n",
-    "from constants import MONGO_NAME,MONGO_PW, MONGO_DB"
+    "from constants import MONGO_NAME, MONGO_PW, MONGO_DB"
    ]
   },
   {
@@ -96,122 +97,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "features = [\n",
-    "#  'START_POSITION',\n",
-    " 'PCT_FGA_2PT',\n",
-    " 'PCT_AST_2PM',\n",
-    " 'PCT_PTS_2PT',\n",
-    " 'AST_PCT',\n",
-    " 'PCT_FG3M',\n",
-    " 'PCT_BLKA',\n",
-    " 'PCT_BLK',\n",
-    " 'FG3_PCT',\n",
-    " 'PCT_PTS',\n",
-    " 'PCT_FGM',\n",
-    " 'PCT_REB',\n",
-    " 'PCT_FGA',\n",
-    " 'E_USG_PCT',\n",
-    " 'REB_PCT',\n",
-    " 'PCT_PTS_OFF_TOV',\n",
-    " 'PCT_DREB',\n",
-    " 'OPP_OREB_PCT',\n",
-    " 'PCT_UAST_3PM',\n",
-    " 'PCT_TOV',\n",
-    " 'DREB_PCT',\n",
-    " 'PCT_FTM',\n",
-    " 'OPP_TOV_PCT',\n",
-    " 'PCT_UAST_2PM',\n",
-    " 'PCT_AST_3PM',\n",
-    " 'USG_PCT',\n",
-    " 'PCT_AST',\n",
-    " 'FG_PCT',\n",
-    " 'EFG_PCT',\n",
-    " 'TS_PCT',\n",
-    " 'PCT_OREB',\n",
-    " 'PCT_PTS_2PT_MR',\n",
-    " 'PCT_PF',\n",
-    " 'FT_PCT',\n",
-    " 'PCT_PTS_PAINT',\n",
-    " 'PCT_PTS_FT',\n",
-    " 'PCT_PFD',\n",
-    " 'PCT_FGA_3PT',\n",
-    " 'OPP_EFG_PCT',\n",
-    " 'CFG_PCT',\n",
-    " 'TM_TOV_PCT',\n",
-    " 'PCT_UAST_FGM',\n",
-    " 'PCT_PTS_3PT',\n",
-    " 'OREB_PCT',\n",
-    " 'PCT_PTS_FB',\n",
-    " 'PCT_AST_FGM',\n",
-    " 'UFG_PCT',\n",
-    " 'PCT_FG3A',\n",
-    " 'PCT_STL',\n",
-    " 'DFG_PCT',\n",
-    " 'OREB',\n",
-    " 'AST',\n",
-    " 'REB',\n",
-    " 'DFGA',\n",
-    " 'SAST',\n",
-    " 'OPP_PTS_2ND_CHANCE',\n",
-    " 'PFD',\n",
-    " 'TO',\n",
-    " 'FG3A',\n",
-    " 'STL',\n",
-    " 'POSS',\n",
-    " 'PASS',\n",
-    " 'UFGM',\n",
-    " 'FG3M',\n",
-    " 'PTS',\n",
-    " 'UFGA',\n",
-    " 'DRBC',\n",
-    " 'OPP_PTS_PAINT',\n",
-    " 'FTM',\n",
-    " 'ORBC',\n",
-    " 'BLKA',\n",
-    " 'PTS_FB',\n",
-    " 'CFGA',\n",
-    " 'PTS_PAINT',\n",
-    " 'TCHS',\n",
-    " 'CFGM',\n",
-    " 'PLUS_MINUS',\n",
-    " 'DFGM',\n",
-    " 'OPP_PTS_OFF_TOV',\n",
-    " 'PTS_OFF_TOV',\n",
-    " 'FGA',\n",
-    " 'FTA',\n",
-    " 'PTS_2ND_CHANCE',\n",
-    " 'FGM',\n",
-    " 'PF',\n",
-    " 'DREB',\n",
-    " 'BLK',\n",
-    " 'RBC',\n",
-    " 'OPP_PTS_FB',\n",
-    " 'FTAST',\n",
-    " 'E_OFF_RATING',\n",
-    " 'OFF_RATING',\n",
-    " 'E_NET_RATING',\n",
-    " 'E_DEF_RATING',\n",
-    " 'NET_RATING',\n",
-    " 'DEF_RATING',\n",
-    " 'E_PACE',\n",
-    " 'AST_RATIO',\n",
-    " 'DIST',\n",
-    " 'AST_TOV',\n",
-    " 'FTA_RATE',\n",
-    " 'OPP_FTA_RATE',\n",
-    " 'MIN',\n",
-    " 'PACE_PER40',\n",
-    " 'PACE',\n",
-    " 'PIE']"
+    "    #  'START_POSITION',\n",
+    "    \"PCT_FGA_2PT\",\n",
+    "    \"PCT_AST_2PM\",\n",
+    "    \"PCT_PTS_2PT\",\n",
+    "    \"AST_PCT\",\n",
+    "    \"PCT_FG3M\",\n",
+    "    \"PCT_BLKA\",\n",
+    "    \"PCT_BLK\",\n",
+    "    \"FG3_PCT\",\n",
+    "    \"PCT_PTS\",\n",
+    "    \"PCT_FGM\",\n",
+    "    \"PCT_REB\",\n",
+    "    \"PCT_FGA\",\n",
+    "    \"E_USG_PCT\",\n",
+    "    \"REB_PCT\",\n",
+    "    \"PCT_PTS_OFF_TOV\",\n",
+    "    \"PCT_DREB\",\n",
+    "    \"OPP_OREB_PCT\",\n",
+    "    \"PCT_UAST_3PM\",\n",
+    "    \"PCT_TOV\",\n",
+    "    \"DREB_PCT\",\n",
+    "    \"PCT_FTM\",\n",
+    "    \"OPP_TOV_PCT\",\n",
+    "    \"PCT_UAST_2PM\",\n",
+    "    \"PCT_AST_3PM\",\n",
+    "    \"USG_PCT\",\n",
+    "    \"PCT_AST\",\n",
+    "    \"FG_PCT\",\n",
+    "    \"EFG_PCT\",\n",
+    "    \"TS_PCT\",\n",
+    "    \"PCT_OREB\",\n",
+    "    \"PCT_PTS_2PT_MR\",\n",
+    "    \"PCT_PF\",\n",
+    "    \"FT_PCT\",\n",
+    "    \"PCT_PTS_PAINT\",\n",
+    "    \"PCT_PTS_FT\",\n",
+    "    \"PCT_PFD\",\n",
+    "    \"PCT_FGA_3PT\",\n",
+    "    \"OPP_EFG_PCT\",\n",
+    "    \"CFG_PCT\",\n",
+    "    \"TM_TOV_PCT\",\n",
+    "    \"PCT_UAST_FGM\",\n",
+    "    \"PCT_PTS_3PT\",\n",
+    "    \"OREB_PCT\",\n",
+    "    \"PCT_PTS_FB\",\n",
+    "    \"PCT_AST_FGM\",\n",
+    "    \"UFG_PCT\",\n",
+    "    \"PCT_FG3A\",\n",
+    "    \"PCT_STL\",\n",
+    "    \"DFG_PCT\",\n",
+    "    \"OREB\",\n",
+    "    \"AST\",\n",
+    "    \"REB\",\n",
+    "    \"DFGA\",\n",
+    "    \"SAST\",\n",
+    "    \"OPP_PTS_2ND_CHANCE\",\n",
+    "    \"PFD\",\n",
+    "    \"TO\",\n",
+    "    \"FG3A\",\n",
+    "    \"STL\",\n",
+    "    \"POSS\",\n",
+    "    \"PASS\",\n",
+    "    \"UFGM\",\n",
+    "    \"FG3M\",\n",
+    "    \"PTS\",\n",
+    "    \"UFGA\",\n",
+    "    \"DRBC\",\n",
+    "    \"OPP_PTS_PAINT\",\n",
+    "    \"FTM\",\n",
+    "    \"ORBC\",\n",
+    "    \"BLKA\",\n",
+    "    \"PTS_FB\",\n",
+    "    \"CFGA\",\n",
+    "    \"PTS_PAINT\",\n",
+    "    \"TCHS\",\n",
+    "    \"CFGM\",\n",
+    "    \"PLUS_MINUS\",\n",
+    "    \"DFGM\",\n",
+    "    \"OPP_PTS_OFF_TOV\",\n",
+    "    \"PTS_OFF_TOV\",\n",
+    "    \"FGA\",\n",
+    "    \"FTA\",\n",
+    "    \"PTS_2ND_CHANCE\",\n",
+    "    \"FGM\",\n",
+    "    \"PF\",\n",
+    "    \"DREB\",\n",
+    "    \"BLK\",\n",
+    "    \"RBC\",\n",
+    "    \"OPP_PTS_FB\",\n",
+    "    \"FTAST\",\n",
+    "    \"E_OFF_RATING\",\n",
+    "    \"OFF_RATING\",\n",
+    "    \"E_NET_RATING\",\n",
+    "    \"E_DEF_RATING\",\n",
+    "    \"NET_RATING\",\n",
+    "    \"DEF_RATING\",\n",
+    "    \"E_PACE\",\n",
+    "    \"AST_RATIO\",\n",
+    "    \"DIST\",\n",
+    "    \"AST_TOV\",\n",
+    "    \"FTA_RATE\",\n",
+    "    \"OPP_FTA_RATE\",\n",
+    "    \"MIN\",\n",
+    "    \"PACE_PER40\",\n",
+    "    \"PACE\",\n",
+    "    \"PIE\",\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,6 +234,16 @@
     "    win_loss_predictions = np.where(test_predictions > 0, 1, 0)\n",
     "    win_loss_truth = np.where(test_labels.to_numpy() > 0, 1, 0)\n",
     "    return abs(win_loss_predictions - win_loss_truth).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the player data\n",
+    "player_data = pd.read_csv(\"data/player_data.csv\")"
    ]
   },
   {
@@ -248,12 +260,9 @@
     }
    ],
    "source": [
-    "# Load the player data\n",
-    "player_data = pd.read_csv('data/player_data.csv')\n",
-    "\n",
     "# Define parameters\n",
     "player_count = 5  # Number of players to consider per team\n",
-    "target = 'PLUS_MINUS'\n",
+    "target = \"PLUS_MINUS\"\n",
     "game_ids = list(set(player_data.GAME_ID))\n",
     "\n",
     "# Placeholder for processed rows\n",
@@ -287,28 +296,37 @@
     "\n",
     "    # Compute the target (plus-minus)\n",
     "    team_1_plus_minus = team_1_data[\"PTS\"].sum() - team_2_data[\"PTS\"].sum()\n",
-    "    \n",
+    "\n",
     "    # Flatten the features for both teams\n",
     "    team_1_features = team_1_data[features].fillna(0).values.flatten()\n",
     "    team_2_features = team_2_data[features].fillna(0).values.flatten()\n",
     "\n",
     "    # Generate column names dynamically\n",
-    "    feature_columns = (\n",
-    "        [f\"team1_player{i+1}_{feature}\" for i in range(player_count) for feature in features]\n",
-    "        + [f\"team2_player{i+1}_{feature}\" for i in range(player_count) for feature in features]\n",
-    "    )\n",
+    "    feature_columns = [\n",
+    "        f\"team1_player{i+1}_{feature}\"\n",
+    "        for i in range(player_count)\n",
+    "        for feature in features\n",
+    "    ] + [\n",
+    "        f\"team2_player{i+1}_{feature}\"\n",
+    "        for i in range(player_count)\n",
+    "        for feature in features\n",
+    "    ]\n",
     "\n",
     "    # Create original row\n",
-    "    data_rows.append({\n",
-    "        'features': np.concatenate([team_1_features, team_2_features]),\n",
-    "        'plus_minus': team_1_plus_minus\n",
-    "    })\n",
+    "    data_rows.append(\n",
+    "        {\n",
+    "            \"features\": np.concatenate([team_1_features, team_2_features]),\n",
+    "            \"plus_minus\": team_1_plus_minus,\n",
+    "        }\n",
+    "    )\n",
     "\n",
     "    # Create reordered row\n",
-    "    data_rows.append({\n",
-    "        'features': np.concatenate([team_2_features, team_1_features]),\n",
-    "        'plus_minus': -team_1_plus_minus\n",
-    "    })"
+    "    data_rows.append(\n",
+    "        {\n",
+    "            \"features\": np.concatenate([team_2_features, team_1_features]),\n",
+    "            \"plus_minus\": -team_1_plus_minus,\n",
+    "        }\n",
+    "    )"
    ]
   },
   {
@@ -320,8 +338,13 @@
     "# Convert rows to DataFrame\n",
     "data_df = pd.DataFrame(data_rows)\n",
     "\n",
-    "data_df = pd.concat([pd.DataFrame(data_df['features'].tolist(), columns=feature_columns), \n",
-    "                     data_df[['plus_minus']]], axis=1)\n",
+    "data_df = pd.concat(\n",
+    "    [\n",
+    "        pd.DataFrame(data_df[\"features\"].tolist(), columns=feature_columns),\n",
+    "        data_df[[\"plus_minus\"]],\n",
+    "    ],\n",
+    "    axis=1,\n",
+    ")\n",
     "\n",
     "data_df.fillna(0, inplace=True)"
    ]
@@ -333,16 +356,20 @@
    "outputs": [],
    "source": [
     "# Scaling and splitting the data\n",
-    "X = data_df.drop(columns=['plus_minus'])\n",
-    "y = data_df['plus_minus']\n",
+    "X = data_df.drop(columns=[\"plus_minus\"])\n",
+    "y = data_df[\"plus_minus\"]\n",
     "\n",
     "scaler = StandardScaler()\n",
     "X_scaled = scaler.fit_transform(X)\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X_scaled, y, test_size=0.2, random_state=42\n",
+    ")\n",
     "\n",
     "# Final output\n",
-    "final_data = pd.concat([pd.DataFrame(X_scaled, columns=X.columns), y.reset_index(drop=True)], axis=1)"
+    "final_data = pd.concat(\n",
+    "    [pd.DataFrame(X_scaled, columns=X.columns), y.reset_index(drop=True)], axis=1\n",
+    ")"
    ]
   },
   {
@@ -10382,7 +10409,7 @@
     "    n_estimators=10000,\n",
     "    objective=\"reg:squarederror\",\n",
     "    eval_metric=\"rmse\",\n",
-    "    early_stopping_rounds=50\n",
+    "    early_stopping_rounds=50,\n",
     ")\n",
     "\n",
     "# Train the model\n",
@@ -10428,10 +10455,9 @@
    "source": [
     "# Print feature importances\n",
     "importances = model.feature_importances_\n",
-    "feature_importance_df = pd.DataFrame({\n",
-    "    \"Feature\": X.columns,\n",
-    "    \"Importance\": importances\n",
-    "}).sort_values(by=\"Importance\", ascending=False)\n",
+    "feature_importance_df = pd.DataFrame(\n",
+    "    {\"Feature\": X.columns, \"Importance\": importances}\n",
+    ").sort_values(by=\"Importance\", ascending=False)\n",
     "\n",
     "print(\"Top 10 Most Important Features:\")\n",
     "print(feature_importance_df.head(10))\n",
@@ -10481,7 +10507,7 @@
     "#     game_team_performances = team_performance_df[team_performance_df.GAME_ID==game_id]\n",
     "#     if len(game_player_performances.TEAM_ABBREVIATION.unique())!=2:\n",
     "#         continue\n",
-    "    \n",
+    "\n",
     "#     a_players,b_players = get_performances_by_team(game_player_performances,\"player\")\n",
     "#     a_team,b_team = get_performances_by_team(game_team_performances,\"team\")\n",
     "\n",
@@ -10492,7 +10518,7 @@
     "#     team_b_data_df = pd.concat([team_b_feature_df,b_team[target]],axis=1)\n",
     "\n",
     "#     data_df_list.append(team_a_data_df)\n",
-    "#     data_df_list.append(team_b_data_df)\n"
+    "#     data_df_list.append(team_b_data_df)"
    ]
   },
   {
@@ -10511,7 +10537,7 @@
    "outputs": [],
    "source": [
     "pca = PCA(100)\n",
-    "col_list = ['feature_{}'.format(i) for i in range(100)]\n",
+    "col_list = [\"feature_{}\".format(i) for i in range(100)]\n",
     "transformed_X = pd.DataFrame(pca.fit_transform(X))\n",
     "transformed_X.columns = col_list"
    ]
@@ -11151,15 +11177,21 @@
     "n = 1000\n",
     "model = xgb.XGBRegressor(\n",
     "    booster=\"gbtree\",\n",
-    "    tree_method = \"hist\",\n",
+    "    tree_method=\"hist\",\n",
     "    learning_rate=0.01,\n",
     "    single_precision_histogram=True,\n",
     "    n_estimators=n,\n",
     "    objective=\"reg:squarederror\",\n",
     "    eval_metric=\"rmse\",\n",
     ")\n",
-    "eval_set = [(train_features, train_labels),(test_features, test_labels)]\n",
-    "model = model.fit(train_features, train_labels, eval_set=eval_set, verbose=True,early_stopping_rounds=50)"
+    "eval_set = [(train_features, train_labels), (test_features, test_labels)]\n",
+    "model = model.fit(\n",
+    "    train_features,\n",
+    "    train_labels,\n",
+    "    eval_set=eval_set,\n",
+    "    verbose=True,\n",
+    "    early_stopping_rounds=50,\n",
+    ")"
    ]
   },
   {
@@ -11181,7 +11213,7 @@
     "wler = win_loss_error_rate(predictions, test_labels)\n",
     "r2 = r2_score(test_labels, predictions)\n",
     "print(r2)\n",
-    "print(1-wler)"
+    "print(1 - wler)"
    ]
   },
   {
@@ -11213,7 +11245,9 @@
     }
    ],
    "source": [
-    "xgb.plot_importance(model,max_num_features=20,importance_type='weight',xlabel='weight')"
+    "xgb.plot_importance(\n",
+    "    model, max_num_features=20, importance_type=\"weight\", xlabel=\"weight\"\n",
+    ")"
    ]
   },
   {
