--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -15,7 +15,7 @@
     "    flatten_performance_df,\n",
     "    get_average_player_performances,\n",
     "    get_score_df,\n",
-    "    insert_team_abbreviation\n",
+    "    insert_team_abbreviation,\n",
     ")\n",
     "from simulation import simulate_nba_matchup, get_score_df\n",
     "import xgboost as xgb\n",
@@ -42,14 +42,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "season_performances = pd.DataFrame(\n",
-    "    list(\n",
-    "        db.playerPerformances.find(\n",
-    "            {\n",
-    "            }\n",
-    "        )\n",
-    "    )\n",
-    ").set_index(\"_id\")\n",
+    "season_performances = pd.DataFrame(list(db.playerPerformances.find({}))).set_index(\n",
+    "    \"_id\"\n",
+    ")\n",
     "season_performances = flatten_performance_df(season_performances)"
    ]
   },
@@ -59,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "season_performances.to_csv('data/all_time_data.csv')"
+    "season_performances.to_csv(\"data/all_time_data.csv\")"
    ]
   },
   {
@@ -116,7 +111,7 @@
     "    )\n",
     ").set_index(\"_id\")\n",
     "season_performances = flatten_performance_df(season_performances)\n",
-    "average_performances = get_average_player_performances(season_performances)\n"
+    "average_performances = get_average_player_performances(season_performances)"
    ]
   },
   {
@@ -125,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "average_performances.to_csv('data/player_performance_data.csv')"
+    "average_performances.to_csv(\"data/player_performance_data.csv\")"
    ]
   },
   {
@@ -134,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "average_performances = pd.read_csv('data/player_performance_data.csv',index_col=0)"
+    "average_performances = pd.read_csv(\"data/player_performance_data.csv\", index_col=0)"
    ]
   },
   {
@@ -162,8 +157,10 @@
     }
    ],
    "source": [
-    "team_A, team_B = 'BOS','MIL'\n",
-    "score = simulate_nba_matchup(team_A,team_B, average_performances,model=model, team_size=team_size)\n",
+    "team_A, team_B = \"BOS\", \"MIL\"\n",
+    "score = simulate_nba_matchup(\n",
+    "    team_A, team_B, average_performances, model=model, team_size=team_size\n",
+    ")\n",
     "print(score)"
    ]
   },
@@ -181,8 +178,10 @@
     }
    ],
    "source": [
-    "team_A, team_B = 'GSW','MEM'\n",
-    "score = simulate_nba_matchup(team_A,team_B, average_performances, model=model, team_size=team_size)\n",
+    "team_A, team_B = \"GSW\", \"MEM\"\n",
+    "score = simulate_nba_matchup(\n",
+    "    team_A, team_B, average_performances, model=model, team_size=team_size\n",
+    ")\n",
     "print(score)"
    ]
   },
@@ -240,7 +239,7 @@
     }
    ],
    "source": [
-    "pd.DataFrame(score, index=['GSW','MEM'], columns=['Predicted +-'])"
+    "pd.DataFrame(score, index=[\"GSW\", \"MEM\"], columns=[\"Predicted +-\"])"
    ]
   },
   {
@@ -257,8 +256,16 @@
     }
    ],
    "source": [
-    "team_A, team_B = 'MIA','MIA'\n",
-    "score = simulate_nba_matchup(team_A,team_B, average_performances, model=model,team_A_injured_player_ids=[201588],team_B_injured_player_ids=[1628366], team_size=team_size)\n",
+    "team_A, team_B = \"MIA\", \"MIA\"\n",
+    "score = simulate_nba_matchup(\n",
+    "    team_A,\n",
+    "    team_B,\n",
+    "    average_performances,\n",
+    "    model=model,\n",
+    "    team_A_injured_player_ids=[201588],\n",
+    "    team_B_injured_player_ids=[1628366],\n",
+    "    team_size=team_size,\n",
+    ")\n",
     "print(score)"
    ]
   },
@@ -276,8 +283,15 @@
     }
    ],
    "source": [
-    "team_A, team_B = 'DAL','PHX'\n",
-    "score = simulate_nba_matchup(team_A,team_B, average_performances, model=model, team_B_injured_player_ids=[1630583],team_size=team_size)\n",
+    "team_A, team_B = \"DAL\", \"PHX\"\n",
+    "score = simulate_nba_matchup(\n",
+    "    team_A,\n",
+    "    team_B,\n",
+    "    average_performances,\n",
+    "    model=model,\n",
+    "    team_B_injured_player_ids=[1630583],\n",
+    "    team_size=team_size,\n",
+    ")\n",
     "print(score)"
    ]
   },
@@ -287,7 +301,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "average_performances_21 = get_average_player_performances(pd.read_csv('data/22021_data.csv',index_col=0).drop('GAME_ID',axis=1))"
+    "average_performances_21 = get_average_player_performances(\n",
+    "    pd.read_csv(\"data/22021_data.csv\", index_col=0).drop(\"GAME_ID\", axis=1)\n",
+    ")"
    ]
   },
   {
@@ -304,7 +320,9 @@
     }
    ],
    "source": [
-    "average_performances_21 = insert_team_abbreviation(get_score_df(average_performances_21))"
+    "average_performances_21 = insert_team_abbreviation(\n",
+    "    get_score_df(average_performances_21)\n",
+    ")"
    ]
   },
   {
@@ -314,7 +332,9 @@
    "outputs": [],
    "source": [
     "season_performances_copy = season_performances.copy()\n",
-    "season_performances_copy = season_performances_copy.set_index(['GAME_DATE','PLAYER_NAME','PLAYER_ID']).sort_index()"
+    "season_performances_copy = season_performances_copy.set_index(\n",
+    "    [\"GAME_DATE\", \"PLAYER_NAME\", \"PLAYER_ID\"]\n",
+    ").sort_index()"
    ]
   },
   {
@@ -324,7 +344,7 @@
    "outputs": [],
    "source": [
     "start_col = season_performances_copy.columns.get_loc(\"PCT_FGA_2PT\")\n",
-    "season_performances_stats = season_performances_copy.iloc[:,start_col:]"
+    "season_performances_stats = season_performances_copy.iloc[:, start_col:]"
    ]
   },
   {
@@ -334,7 +354,7 @@
    "outputs": [],
    "source": [
     "player_performances = season_performances_stats.query('PLAYER_NAME==\"LeBron James\"')\n",
-    "stats = player_performances.iloc[:,start_col:].ewm(alpha=0.1).mean()\n",
+    "stats = player_performances.iloc[:, start_col:].ewm(alpha=0.1).mean()\n",
     "score = stats.mul(stats.corrwith(stats.PTS)).mean(axis=1)"
    ]
   },
